# probe_basic

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  .travis.yml  MANIFEST.in  README.md  atc_setup.html  custom_ux_hacking.html  debian_docs_structure_template.html  dev_install.html  development_quick_start_apt.html  docs_requirements.txt  dummy_file  editwidget.py  genindex.html  index.html  lathe_interface.html  machine_config.html  mill_interface.html  objects.inv  probe_basic_apt_develop_install.html  probe_basic_apt_stable_install.html  probe_basic_deb_install.html  probe_basic_dev_install.html  probe_basic_parameters.html  probe_basic_stable_develop_change.html  probing.html  pyproject.toml  quick_start.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  stable_develop_branch_change.html  stable_quick_start_apt.html  tool_length_setter.html  tool_offsets_lathe.html  update_notes.html  (+4 more)
.doctrees/: atc_setup.doctree  custom_ux_hacking.doctree  debian_docs_structure_template.doctree  dev_install.doctree  development_quick_start_apt.doctree  environment.pickle  index.doctree  lathe_interface.doctree  machine_config.doctree  mill_interface.doctree  probe_basic_apt_develop_install.doctree  probe_basic_apt_stable_install.doctree  probe_basic_deb_install.doctree  probe_basic_dev_install.doctree  probe_basic_parameters.doctree  probe_basic_stable_develop_change.doctree  probing.doctree  quick_start.doctree  stable_develop_branch_change.doctree  stable_quick_start_apt.doctree  tool_length_setter.doctree  tool_offsets_lathe.doctree  update_notes.doctree  update_notes_develop.doctree  update_notes_stable.doctree  user_tabs.doctree
.github/: copilot-instructions.md
.scripts/: clean_apt_develop.sh  publish_github_release.sh  publish_pypi_release.sh
.travis/: build_deb.sh  do_release.sh  publish_github_release.sh
_sources/: custom_ux_hacking.rst.txt  debian_docs_structure_template.rst.txt  dev_install.rst.txt  development_quick_start_apt.rst.txt  index.rst.txt  lathe_interface.rst.txt  machine_config.rst.txt  probe_basic_apt_develop_install.rst.txt  probe_basic_apt_stable_install.rst.txt  probe_basic_deb_install.rst.txt  probe_basic_dev_install.rst.txt  probe_basic_parameters.rst.txt  probing.rst.txt  quick_start.rst.txt  stable_develop_branch_change.rst.txt  stable_quick_start_apt.rst.txt  tool_length_setter.rst.txt  update_notes.rst.txt  update_notes_develop.rst.txt  update_notes_stable.rst.txt
_static/: documentation_options.js
audit_reports/: CPP_BACKPLOT_REWRITE_FILE_EDIT_LIST_2026-03-03.md  GCODE_LOAD_PERFORMANCE_REPORT_2026-02-28.md  QSCINTILLA_QT6_BUILD_OUTLINE.md  load_comp.txt  running_notes.rst
debian/: changelog  control  debhelper-build-stamp  files  postinst  python3-probe-basic.prerm.debhelper  python3-probe_basic.postinst.debhelper  rules
debian_12_bookworm/: index.html
debian_13_trixie/: index.html
dev_launchers/: Designer for PB Grinder.desktop  Designer for PB Lathe.desktop  Designer for PB Mill Vertical.desktop  Designer for PB Mill.desktop  PB Lathe Designer.desktop  PB Mill Designer.desktop  PB Mill Designer0.desktop  Probe Basic ATC Mill Metric.desktop  Probe Basic ATC Mill.desktop  Probe Basic Grinder.desktop  Probe Basic Lathe.desktop  Probe Basic Mill Vertical.desktop  Probe Basic Mill.desktop  Probe Basic Rack ATC Mill.desktop  probe_basic_atc_mill_launcher.sh  probe_basic_atc_mill_launcher_metric.sh  probe_basic_grinder_designer.sh  probe_basic_grinder_launcher.sh  probe_basic_lathe_designer.sh  probe_basic_lathe_launcher.sh  probe_basic_mill_designer.sh  probe_basic_mill_launcher.sh  probe_basic_mill_vertical_designer.sh  (+2 more)
(+1476 files in other folders)
