[build-system]
requires = ["poetry-core", "versioneer[toml]"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "probe_basic"
authors = [
  "Chris Polanski <lcvette1@gmail.com>",
]
description = "Probe Basic - A QtPyVCP based Virtual Control Panel for LinuxCNC"
readme = "README.md"
version = "0.0"

packages = [
	{ include = "probe_basic", from = "src" },
	{ include = "probe_basic_lathe", from = "src" },
	{ include = "probe_basic_grinder", from = "src" },
	{ include = "widgets", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.scripts]
probe_basic = "probe_basic:main"
probe_basic_lathe = "probe_basic_lathe:main"
probe_basic_grinder = "probe_basic_grinder:main"

[tool.poetry.plugins]

[tool.poetry.plugins."qtpyvcp.vcp"]
probe_basic = "probe_basic"
probe_basic_lathe = "probe_basic_lathe"
probe_basic_grinder = "probe_basic_grinder"

[tool.poetry.plugins."qtpyvcp.widgets"]
probe_basic_widgets = "widgets"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "probe_basic/_version.py"
versionfile_build = "probe_basic/_version.py"
tag_prefix = ""
parentdir_prefix = ""
