[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "probe_basic"
authors = [
  "Chris Polanski <lcvette1@gmail.com>",
]
description = "Probe Basic - A QtPyVCP based Virtual Control Panel for LinuxCNC"
readme = "README.md"
version = "0.0.0"
dynamic = ["version"]


packages = [
	{ include = "probe_basic", from = "src" },
	{ include = "probe_basic_lathe", from = "src" },
	{ include = "widgets", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.7"
PySide6 = {version = "^6.0", optional = true}
qtpy = "^2.0"

[tool.poetry.group.docs.dependencies]
Sphinx = ">=4.0"
sphinx_rtd_theme = ">=1.0"

[tool.poetry.scripts]
probe_basic = "probe_basic:main"
probe_basic_lathe = "probe_basic_lathe:main"


[tool.poetry.plugins]


[tool.poetry.plugins."qtpyvcp.vcp"]
probe_basic = "probe_basic"
probe_basic_lathe = "probe_basic_lathe"


[tool.poetry.plugins."qtpyvcp.widgets"]
probe_basic_widgets = "widgets"


[tool.poetry.extras]
pyside6 = ["PySide6"]


[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "probe_basic/_version.py"
versionfile_build = "probe_basic/_version.py"
tag_prefix = ""
parentdir_prefix = ""

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)"
format-jinja = """
    {%- if distance == 0 -%}
        {{ base }}
    {%- else -%}
        {{ base }}+{{ distance }}.g{{ commit }}
    {%- endif -%}
"""
